# whattheheader

./: Dockerfile  README.md  go.mod  main.go
go-stdlib/: Dockerfile
python-fastapi/: main.py  pyproject.toml
rust-axum/: Cargo.toml
rust-axum/src/: main.rs
rust-poem/: Cargo.toml
rust-poem/src/: main.rs
